--- a/src/components/PostCom/PostComForm.scss
+++ b/src/components/PostCom/PostComForm.scss
@@ -37,7 +37,7 @@
           &:focus {
               border-color: grey;
               outline: none;
-              box-shadow: 0 0 5px rgba(76, 175, 80, 0.5);
+              box-shadow: 0 0 5px  #3a9f97;
           }
       }
 
