--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,7 @@ td {
   padding: 30px;
   font-size: 16px;
   vertical-align: middle; /* 모든 셀의 내용을 가운데 정렬 */
+  background-color: #f4f2f0;
 }
 
 button {
