--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,6 +4,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+    color: #868377; /* 기본 색상 변경 */
     /* border-bottom: 1px solid #000;  헤더와 페이지를 구분짓는 선 제거 */
 }
 
@@ -37,14 +38,20 @@ header {
     justify-content: space-between;
     align-items: center;
     column-gap: 12px;
+    color:#868377 ;
     font-family: 'Malgun Gothic', sans-serif; /* 폰트 변경 */
 }
 
 .util ul li {
     padding: 0px 20px;
+    color: black; /* 기본 색상 변경 */
+    transition: color 0.3s ease; /* 색상 전환 효과 */
 }
 
-/* 로그아웃 버튼을 다른 링크와 비슷하게 스타일링 */
+.util ul li:hover {
+    color: #000; /* 마우스 오버 시 색상 변경 */
+}
+
 .btn-logout {
     background: none;
     border: none;
@@ -58,7 +65,7 @@ header {
 }
 
 .btn-logout:hover {
-    color: #868377; /* 마우스 오버 시 색상 변경 */
+    color: #000; /* 마우스 오버 시 색상 변경 */
 }
 
 /* 드롭다운 스타일 */
@@ -69,7 +76,7 @@ header {
 
 .dropbtn {
     background-color: transparent; /* 투명 배경 유지 */
-    color: #000;
+    color: black; /* 기본 색상 변경 */
     border: none;
     font-family: 'Malgun Gothic', sans-serif; /* 폰트 변경 */
     font-size: 20px;
@@ -79,7 +86,7 @@ header {
 }
 
 .dropbtn:hover {
-    color: #868377; /* 마우스 오버 시 텍스트 색상만 변경 */
+    color: #000; /* 마우스 오버 시 색상 변경 */
     background-color: transparent; /* 배경색 변화 없도록 설정 */
 }
 
@@ -95,7 +102,7 @@ header {
 }
 
 .dropdown-content a {
-    color: black;
+    color: #868377; /* 기본 색상 변경 */
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -105,7 +112,7 @@ header {
 
 .dropdown-content a:hover {
     background-color: #f1f1f1;
-    color: #868377; /* 마우스 오버 시 텍스트 색상만 변경 */
+    color: #000; /* 마우스 오버 시 텍스트 색상 변경 */
 }
 
 /* 드롭다운 활성화 시 보여주기 */
