인기여행지수정

--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -437,7 +437,7 @@ $max-width: 1600px;
     &:first-child {
       font-size: 18px;
       font-weight: bold;
-      background-color: #91d5a6;; /* 강조된 배경색 */
+      background-color: #a0dbb3b2;; /* 강조된 배경색 */
       color: white; /* 글자색 강조 */
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
       transform: scale(1.05); /* 크기 확대 */
